Mon Feb 26 22:59:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/xslt.html : cleaned up, added a bit more description on
	  the API section.

Mon Feb 26 09:41:04 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am libxslt/extensions.[ch]: started working
	  on functions and element extensions. First on list will be
	  a document element.

Sun Feb 25 06:52:14 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt.spec.in: releasing 0.3.0
	* doc/xslt.html: updated
	
Sun Feb 25 05:28:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in tests/docbook/html : oops forgot to add
	  the stylesheets themselves :-\

Sun Feb 25 04:51:33 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in tests/Makefile.am tests/docbook tree:
	  added docbook XSL based test suite

Sat Feb 24 14:02:05 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.c: reformat of messages
	* libxslt/xsltproc.c: removed memleak on --noout
	* libxslt/xsltInternals.h libxslt/variables.[ch] libxslt/transform.c:
	  changed again the way parameter are evaluated before a
	  call-template, seems to fix a few nasty bugs, memory alloc debug too
	
Wed Feb 21 09:10:13 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/variables.c libxslt/xsltInternals.h:
	  fixed the param evaluation problem in apply-template
	* libxslt/pattern.c: speed up seriously some context computation
	* libxslt/xsltInternals.h: preparing for extension support
	  
Mon Feb 19 19:34:59 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am: small cleanup
	* libxslt/functions.c libxslt/transform.c libxslt/xsltInternals.h:
	  fixed current() I hope

Mon Feb 19 18:05:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/numbers.c libxslt/numbersInternals.h libxslt/xslt.c
	  libxslt/pattern.[ch] libxslt/xsltInternals.h:  more work on