@@ -8,8 +8,9 @@
 </head>
 
 <body bgcolor="#ffffff">
-<p><a href="http://www.gnome.org/"><img src="../smallfootonly.gif"
-alt="Gnome Logo"></a></p>
+<p><a href="http://www.gnome.org/"><img src="smallfootonly.gif"
+alt="Gnome Logo"></a><a href="http://www.redhat.com"><img src="redhat.gif"
+alt="Red Hat Logo"></a></p>
 
 <h1 align="center">The XSLT C library for Gnome</h1>
 
